Moj trzeci fajniejszy commit :)

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="container">
             <nav>
                 <div class="logo">Portfolio: Alex Szymański</div>
+                <div class="theme">Cick to change theme!</div>
             </nav>
         </div>
     </header>
